# Todo-account

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml  skills-lock.json
backend/: .env copy.example  CLAUDE.md  main.py  pyproject.toml
backend/src/api/: auth.py  database.py  main.py  models.py
backend/src/api/routes/: chat.py  entries.py
backend/src/mcp_server/: server.py
frontend/: CLAUDE.md  next.config.ts  package-lock.json  package.json
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/api/auth/[...all]/: route.ts
frontend/app/dashboard/: page.tsx
frontend/lib/: api.ts  auth-client.ts  auth.ts
k8s/: Dockerfile.backend
k8s/dapr/: kafka-pubsub.yaml
k8s/helm/accounting-ledger/: Chart.yaml  values.yaml
k8s/helm/accounting-ledger/templates/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
specs/: overview.md
specs/api/: rest-endpoints.md
specs/database/: better-auth-migration.sql  schema.md
specs/features/: ai-chatbot.md  task-crud.md
src/todo/: main.py  models.py  storage.py
